<resources>
    <string name="app_name">Teach Average App</string>
    <string name="check_answer">Check Answer</string>
    <string name="expect_inputs">Expect two integers and their average</string>
    <!-- internationalization i18n-->
</resources>